--- a/webroot/less/base/typo.less
+++ b/webroot/less/base/typo.less
@@ -72,11 +72,44 @@ li{
     margin-bottom: 1em;
 }
 
+// FONT-WEIGHT
+
+.fw-bold{
+    font-weight: 700;
+}
+
+.fw-light{
+    font-weight: 300;
+}
+
+.fw-medium{
+    font-weight: 500;
+}
+
 // FONT
 
+.font-143{
+    font-size: clamp(60px, 143vw * @px2vw, 143px);
+    line-height: 102.3%;
+}
+
+.font-128{
+    font-size: clamp(55px, 128vw * @px2vw, 128px);
+    line-height: 102.3%;
+}
+
+.font-96{
+    font-size: clamp(40px, 96vw * @px2vw, 96px);
+    line-height: 1em;
+}
+
+.font-64{
+    font-size: clamp(30px, 64vw * @px2vw, 64px);
+}
+
 .font-60{
-    font-size: clamp(30px, 65vw * @px2vw, 60px);;
-    line-height: normal;
+    font-size: clamp(30px, 65vw * @px2vw, 60px);
+    line-height: 102.3%;
     * {
         line-height: inherit;
     }
@@ -86,6 +119,10 @@ li{
     }
 }
 
+.font-48{
+    font-size: clamp(27px, 48vw * @px2vw, 48px);
+    line-height: 1em;
+}
 
 .font-37{
     font-size: clamp(27px, 40vw * @px2vw, 37px);
@@ -108,11 +145,31 @@ li{
 }
 
 .font-23{
-    font-size: clamp(18px, 30vw * @px2vw, 23px);;
+    font-size: clamp(18px, 30vw * @px2vw, 23px);
     line-height: normal;
     *{
         line-height: inherit;
     }
+}
+
+.font-20{
+    font-size: clamp(15px, 20vw * @px2vw, 20px);
+    line-height: 102.3%;
+}
+
+.font-18{
+    font-size: clamp(14px, 18vw * @px2vw, 18px);
+    line-height: 140%;
+}
+
+.font-16{
+    font-size: clamp(13px, 16vw * @px2vw, 16px);
+    line-height: 140%;
+}
+
+.font-15{
+    font-size: clamp(12px, 15vw * @px2vw, 15px);
+    line-height: 102.3%;
 }
 
 .font-14{
