--- a/webroot/less/base/vars.less
+++ b/webroot/less/base/vars.less
@@ -1,5 +1,6 @@
 // FONTS
 @main-font: 'dolce', sans-serif;
+@second-font: 'Overused Grotesk', sans-serif;
 
 // Var per geneerare vw da px (Es 100vw*@px2vw) == 
 @px2vw: 0.05208;
