iniziando con l'hero

--- a/webroot/less/base/typo.less
+++ b/webroot/less/base/typo.less
@@ -74,8 +74,8 @@ li{
 
 // FONT-WEIGHT
 
-.fw-bold{
-    font-weight: 700;
+.fw-book{
+    font-weight: 350;
 }
 
 .fw-light{
@@ -85,6 +85,13 @@ li{
 .fw-medium{
     font-weight: 500;
 }
+
+// ALIGNMENT
+
+.text-center{
+    text-align: center;
+}
+
 
 // FONT
 
