--- a/webroot/less/base/vars.less
+++ b/webroot/less/base/vars.less
@@ -1,5 +1,5 @@
 // FONTS
-@main-font: 'dolce', sans-serif;
+@main-font: 'Diolce', sans-serif;
 @second-font: 'Overused Grotesk', sans-serif;
 
 // Var per geneerare vw da px (Es 100vw*@px2vw) == 
@@ -12,7 +12,15 @@
 @light-text-color: #FFF;
 @main-color: deeppink;
 @border-color: #e0e0e0;
-@gallery-bg: #bcd3ec; //sfondo gallery 
+@gallery-bg: #bcd3ec;
+
+// PALETTE 
+@black: #000;
+@blue: #215490;
+@blue-light: #689BD9;
+@gray: #ffffff80;
+@cream: #E5DEDC;
+@white: #FFF;
 
 //pulsanti
 @cta-border: #000;
