--- a/webroot/less/main.less
+++ b/webroot/less/main.less
@@ -9,6 +9,7 @@
 @import "base/alert";
 @import "base/keyframes";
 @import "base/mixins";
+@import "base/home";
 
 @import "vendor/fancybox";
 @import "vendor/swiper";
