--- a/webroot/less/base/font.less
+++ b/webroot/less/base/font.less
@@ -1,3 +1,5 @@
+// Overused Grotesk
+
 @font-face {
     font-family: "Overused Grotesk";
     src: url("../fonts/OverusedGrotesk-Light.woff2") format("woff2"),
@@ -22,6 +24,16 @@
          url("../fonts/OverusedGrotesk-Medium.woff2") format("woff"),
          url("../fonts/OverusedGrotesk-Medium.ttf") format("truetype");
     font-weight: 500;
+    font-display: swap;
+    font-style: normal;
+}
+
+// Diolce
+
+@font-face {
+    font-family: "Diolce";
+    src: url("../fonts/Diolce-Regular.otf") format("otf");
+    font-weight: 400;
     font-display: swap;
     font-style: normal;
 }
