--- a/webroot/less/components/header.less
+++ b/webroot/less/components/header.less
@@ -1,10 +1,8 @@
 .header{
     height: 120px; //se si modifica l'altezza dell'header controlla anche le altezze delle hero
-    position: sticky;
+    position: fixed;
     top: 0;
-    left: 0;
     right: 0;
-    background: @header-bg-color;
     padding: 0 clamp(10px, 40vw * @px2vw, 40px);
     display: flex;
     align-items: center;
