--- a/webroot/less/custom/containers.less
+++ b/webroot/less/custom/containers.less
@@ -7,10 +7,6 @@
 }
 
 .container-m{
-    width: clamp(350px, 1076vw * @px2vw, 1076px);
-}
-
-.container-s{
     width: clamp(350px, 1002vw * @px2vw, 1002px);
 }
 
@@ -28,4 +24,8 @@
 
 .container-text-inside{
     width: clamp(350px, 983vw * @px2vw, 983px);
+}
+
+.container-hero{
+    width: clamp(350px, 1076vw * @px2vw, 1076px);
 }
