--- a/webroot/less/custom/spaces.less
+++ b/webroot/less/custom/spaces.less
@@ -4,3 +4,18 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+
+//PADDING
+
+.py-64{
+    .font-64;
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+
+.px-92{
+    .font-64;
+    padding-left: 1.4em;
+    padding-right: 1.4em;
+}
