--- a/webroot/less/base/typo.less
+++ b/webroot/less/base/typo.less
@@ -92,8 +92,14 @@ li{
     text-align: center;
 }
 
-
 // FONT
+
+.font-secondary{
+    font-family: @second-font;
+}
+
+
+// FONT-SIZE
 
 .font-143{
     font-size: clamp(60px, 143vw * @px2vw, 143px);
