--- a/webroot/less/base/home.less
+++ b/webroot/less/base/home.less
@@ -2,19 +2,24 @@
     &__hero{
         position: relative;
         height: 100vh;
+        color: @white;
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
+        gap: 2.85rem;
 
         &__content{
             background-color: #0E0E0EE6;
-            display: flex;
-            align-items: center;
-            flex-direction: column;
+            display: grid;
+            grid-template-columns: 1fr;
+            justify-items: center;
+            text-transform: uppercase;
+            padding: clamp(20px, 64vw * @px2vw, 64px) 0 clamp(50px, 111vw * @px2vw, 111px);
 
             h1{
-                color: @white;
-                text-transform: uppercase;
+                width: clamp(300px, 679vw * @px2vw, 679px);
+                margin-bottom: 0.53em;
             }
         }
 
@@ -24,6 +29,7 @@
             left: 0;
             top: 0;
             width: 100%;
+            height: 100%;
             object-fit: cover;
             filter: brightness(0.5);
         }
@@ -37,6 +43,13 @@
                 height: 100%;
                 object-fit: contain;
             }
+        }
+
+        &__scroll{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: clamp(8px, 11.21vw * @px2vw, 11.21px);
         }
     }
 
