--- a/webroot/less/base/typo.less
+++ b/webroot/less/base/typo.less
@@ -92,6 +92,12 @@ li{
     text-align: center;
 }
 
+// TEXT-TRANSFORM
+
+.uppercase{
+    text-transform: uppercase;
+}
+
 // FONT
 
 .font-secondary{
