--- a/webroot/less/custom/spaces.less
+++ b/webroot/less/custom/spaces.less
@@ -10,6 +10,10 @@
     margin-bottom: 0.68em;
 }
 
+.mb-134{
+    margin-bottom: 2.09em;
+}
+
 
 //PADDING
 
@@ -24,3 +28,8 @@
     padding-left: 1.4em;
     padding-right: 1.4em;
 }
+
+.pt-h{
+    padding-top: clamp(60px, 229vw * @px2vw, 229px);
+}
+
