--- a/webroot/less/main.less
+++ b/webroot/less/main.less
@@ -100,3 +100,7 @@
 @import "custom/backgrounds";
 @import "custom/spaces";
 @import "custom/containers";
+
+
+//Components
+@import "components/prodotti";
