--- a/webroot/less/components/cta.less
+++ b/webroot/less/components/cta.less
@@ -2,35 +2,13 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    height: 46px;
-    padding: 0 20px;
-    border: 1px solid @cta-border;
+    padding-bottom: 6px;
+    border-bottom: 1px solid @black;
     text-transform: uppercase;
-    color: @cta-color;
-    background: @cta-bg;
-    gap: 10px;
-    .font-14;
+    .font-16;
     cursor: pointer;
 
     @media screen and (max-width: @mobile-l) {
         height: 40px;
-    }
-
-
-    svg{
-        path{
-            fill: @cta-color;
-        }
-    }
-
-    &__icon{
-        transition: 300ms @easeOutQuad;
-        flex-shrink: 0;
-    }
-    &:hover{
-        .cta__icon{
-            transform: translate3d(5px,0,0);
-            -webkit-transform: translate3d(5px,0,0);
-        }
     }
 }
