--- a/webroot/less/components/cta.less
+++ b/webroot/less/components/cta.less
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: center;
     padding-bottom: 6px;
+    color: @black;
     border-bottom: 1px solid @black;
     text-transform: uppercase;
     .font-16;
