element img-text

--- a/webroot/less/base/home.less
+++ b/webroot/less/base/home.less
@@ -71,6 +71,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        margin-bottom: clamp(80px, 193vw * @px2vw, 193px);
 
         img{
             position: absolute;
