--- a/webroot/less/base/typo.less
+++ b/webroot/less/base/typo.less
@@ -107,6 +107,11 @@ li{
 
 // FONT-SIZE
 
+.font-180{
+    font-size: clamp(70px, 180vw * @px2vw, 180px);
+    line-height: 102.3%;
+}
+
 .font-143{
     font-size: clamp(60px, 143vw * @px2vw, 143px);
     line-height: 102.3%;
