--- a/webroot/less/base/home.less
+++ b/webroot/less/base/home.less
@@ -89,4 +89,15 @@
             .container-text-inside;
         }
     }
+
+    .swiper-wrapper{
+        -webkit-transition-timing-function:linear;    
+        transition-timing-function:linear; 
+        position: relative;
+    }
+
+    .swiper-slide{
+        position: relative;
+        overflow: hidden;
+    }
 }
