lavorando sulla pagina filosofia

--- a/webroot/less/main.less
+++ b/webroot/less/main.less
@@ -106,3 +106,5 @@
 @import "components/prodotti";
 @import "components/info";
 @import "components/img-text";
+@import "components/title";
+@import "components/triple-img";
