pagina filosofia completata

--- a/webroot/less/components/img-text.less
+++ b/webroot/less/components/img-text.less
@@ -3,6 +3,12 @@
     grid-template-columns: 1fr 1fr;
     padding-right: clamp(0px, 53vw * @px2vw, 53px);
 
+    &--opacity{
+        img{
+            filter: brightness(60%);
+        }
+    }
+
     &__img{
         position: relative;
         color: @white;
