--- a/webroot/less/components/info.less
+++ b/webroot/less/components/info.less
@@ -5,6 +5,8 @@
     }
 
     p{
+        .m-auto;
+        width: clamp(140px, 587vw * @px2vw, 587px);
         .font-18;
         .font-secondary;
         .fw-book;
