--- a/webroot/less/custom/containers.less
+++ b/webroot/less/custom/containers.less
@@ -19,10 +19,10 @@
 }
 
 .container-text{
-    width: clamp(350px, 589vw * @px2vw, 589px);
+    width: clamp(350px, 650vw * @px2vw, 650px);
 }
 
-.container-text-inside{
+.container-paragraph{
     width: clamp(350px, 983vw * @px2vw, 983px);
 }
 
