--- a/webroot/less/base/typo.less
+++ b/webroot/less/base/typo.less
@@ -15,13 +15,12 @@ a{
 }
 
 
-p{
-    line-height: 1.4em;
-    margin-bottom: 1em;
-    &:last-child{
-        margin: 0;
-    }
-}
+// p{
+//     margin-bottom: 1em;
+//     &:last-child{
+//         margin: 0;
+//     }
+// }
 
 em{
     font-style: italic;
@@ -145,7 +144,7 @@ li{
 
 .font-48{
     font-size: clamp(27px, 48vw * @px2vw, 48px);
-    line-height: 1em;
+    .em(48, 102.3)
 }
 
 .font-37{
