--- a/webroot/less/components/triple-img.less
+++ b/webroot/less/components/triple-img.less
@@ -2,6 +2,7 @@
     position: relative;
     height: clamp(400px, 822vw * @px2vw, 822px);
     overflow: hidden;
+    margin-bottom: clamp(50px, 172vw * @px2vw, 172px);
 
     &--secondary{
         img{
