--- a/webroot/less/components/prodotti.less
+++ b/webroot/less/components/prodotti.less
@@ -7,7 +7,14 @@
 
     h1{
         width: clamp(200px, 585vw * @px2vw, 585px);
+    }
 
+    p{
+        .m-auto;
+        .font-secondary;
+        .font-18;
+        .fw-book;
+        width: clamp(150px, 589vw * @px2vw, 589px);
     }
 
     &__img{
