--- a/webroot/less/custom/spaces.less
+++ b/webroot/less/custom/spaces.less
@@ -18,6 +18,10 @@
         margin-bottom: 0.68em;
     }
 
+    .mb-80{
+        margin-bottom: 1.25em;
+    }
+
     .mb-134{
         margin-bottom: 2.09em;
     }
