--- a/webroot/less/base/vars.less
+++ b/webroot/less/base/vars.less
@@ -1,5 +1,5 @@
 // FONTS
-@main-font: 'Diolce', sans-serif;
+@main-font: 'Cormorant Garamond', sans-serif;
 @second-font: 'Overused Grotesk', sans-serif;
 
 // Var per geneerare vw da px (Es 100vw*@px2vw) == 
