--- a/webroot/less/components/img-text.less
+++ b/webroot/less/components/img-text.less
@@ -22,12 +22,12 @@
 
         &__word-1{
             top: -0.07em;
-            right: -0.02em;
+            right: 0;
         }
 
         &__word-2{
-            bottom: -0.30em;
-            left: -0.07em;
+            bottom: -0.20em;
+            left: 0;
         }
     }
 
