--- a/webroot/less/base/font.less
+++ b/webroot/less/base/font.less
@@ -29,11 +29,11 @@
     font-style: normal;
 }
 
-// Diolce
+// Carmorant Garamound
 
 @font-face {
-    font-family: "Diolce";
-    src: url("../fonts/Diolce-Regular.otf") format("otf");
+    font-family: "Cormorant Garamond";
+    src: url("../fonts/CormorantGaramond-Regular.ttf") format("truetype");
     font-weight: 400;
     font-display: swap;
     font-style: normal;
