hamburgher da finire per l'animazione

--- a/webroot/less/components/hamburger.less
+++ b/webroot/less/components/hamburger.less
@@ -1,19 +1,21 @@
 .hamburger{
     display: block;
-    width: 40px;
-    height: 20px;
+    width: 97px;
+    height: 97px;
+    background-color: @black;
+    border-radius: 1000px;
     position: relative;
     cursor: pointer;
     span{
         position: absolute;
         height: 1px;
-        background: @text-color;
-        position: absolute;
-        left: 0;
+        background: @white;
+        width: clamp(22px, 44vw * @px2vw, 44px);
+        left: 50%;
         right: 0;
         top: 50%;
-        transform: translate(0,-50%);
-        -webkit-transform: translate(0,-50%);
+        transform: translate(-50%,-50%);
+        -webkit-transform: translate(-50%,-50%);
         transition: 500ms @easeOutQuad;
 
         .body--light-header:not(.body--scroll) &{
@@ -21,13 +23,13 @@
         }
         
         &:first-child{
-            transform: translate(0,-50%) translate3d(0,-9px, 0);
-            -webkit-transform: translate(0,-50%) translate3d(0,-9px, 0);
+            transform: translate(-50%,-50%) translate3d(0,-9px, 0);
+            -webkit-transform: translate(-50%,-50%) translate3d(0,-9px, 0);
         }
 
         &:last-child{
-            transform: translate(0,-50%) translate3d(0,9px, 0);
-            -webkit-transform: translate(0,-50%) translate3d(0,9px, 0);
+            transform: translate(-50%,-50%) translate3d(0,9px, 0);
+            -webkit-transform: translate(-50%,-50%) translate3d(0,9px, 0);
         }
 
         @media screen and(max-width: @tablet-m){
