parzialmente fatta la pagina contatti

--- a/webroot/less/base/button.less
+++ b/webroot/less/base/button.less
@@ -1,9 +1,7 @@
 .button{
-    display: inline-block;
-    height: 60px;
-    line-height: 60px;
-    padding: 0 3em;
-    background: @main-color;
-    color: @light-text-color;
-    font-size: 1rem;
+    color: @white;
+    border-bottom: 1px solid @white;
+    .font-14;
+    .font-secondary;
+    padding-bottom: 0.57em;
 }
