--- a/webroot/less/components/contacts.less
+++ b/webroot/less/components/contacts.less
@@ -1,5 +1,39 @@
 .contacts{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: 2.5vw;
+    position: relative;
+    color: @white;
+
+    video{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: -1;
+        filter: brightness(40%);
+    }
+    
+    &__info{
+        h1{
+            margin-bottom: 0.37em;
+        }
+
+        margin-bottom: clamp(50px, 167vw * @px2vw, 167px);
+
+        &__text{
+    
+            p{
+                .font-secondary;
+                .fw-light;
+                .font-20;
+                .letterSpacing(7%);
+                margin-bottom: 0.6em;
+            }
+        }
+    }
+
+    &__form{
+        padding-bottom: 3.05em;
+    }
 }
