--- a/webroot/less/components/footer.less
+++ b/webroot/less/components/footer.less
@@ -26,7 +26,8 @@
         grid-template-columns: 1fr 1fr;
         gap: clamp(20px, 174vw * @px2vw, 174px);
 
-        &__agency{
+        &__agency,
+        &__contacts{
             width: clamp(100px, 240vw * @px2vw, 240px)
         }
 
