--- a/webroot/less/components/header.less
+++ b/webroot/less/components/header.less
@@ -16,14 +16,14 @@
         background: none;
     }
 
-    .body--light-header:not(.body--scroll) &{
-        color: @light-text-color;
-    }
+    // .body--light-header:not(.body--scroll) &{
+    //     color: @light-text-color;
+    // }
 
-    .body--scroll &{
-        background: @header-bg-color;
-        height: 100px;
-    }
+    // .body--scroll &{
+    //     background: @header-bg-color;
+    //     height: 100px;
+    // }
 
     @media screen and (max-width: @l) {
         height: 100px;
