--- a/webroot/less/components/contact-form.less
+++ b/webroot/less/components/contact-form.less
@@ -3,13 +3,7 @@
 
     &--1{
         .contact-form__inputs{
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            column-gap: clamp(10px, 40vw*@px2vw, 40px);
-
-            @media screen and (max-width: @tablet-s) {
-                grid-template-columns: 1fr;
-            }
+            display: block;
         }
 
         @media screen and (min-width: (@tablet-s + 1)) {
@@ -38,15 +32,5 @@
             }
         }
         
-    }
-
-    
-    
-    
-
-    .form-footer {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
     }
 }
