--- a/webroot/less/components/gallery.less
+++ b/webroot/less/components/gallery.less
@@ -1,5 +1,9 @@
 .gallery{
     display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
+    gap: clamp(10px, 24vw * @px2vw, 24px);
+
+    img{
+        filter: brightness(80%);
+    }
 }
