--- a/webroot/less/components/product.less
+++ b/webroot/less/components/product.less
@@ -1,8 +1,22 @@
 .product{
-    > div{
-        margin-top: 50px;
-        &:first-child{
-            margin: 0;
+
+    &__title{
+        margin-bottom: 1.34em;
+
+        h1{
+            margin-bottom: 0.26em;
         }
+    }
+    
+    &__preview{
+        width: clamp(300px, 750vw * @px2vw, 750px);
+
+        img{
+            filter: brightness(60%);
+        }
+    }
+
+    &__gallery{
+        
     }
 }
