--- a/webroot/less/custom/spaces.less
+++ b/webroot/less/custom/spaces.less
@@ -37,11 +37,23 @@
     }
 
     .mb-193{
-        margin-bottom: clamp(80px, 193vw * @px2vw, 193px);
+        margin-bottom: clamp(65px, 193vw * @px2vw, 193px);
     }
 
     .mb-214{
-        margin-bottom: clamp(80px, 214vw * @px2vw, 214px);
+        margin-bottom: clamp(70px, 214vw * @px2vw, 214px);
+    }
+
+    .mb-224{
+        margin-bottom: clamp(70px, 224vw * @px2vw, 224px);
+    }
+
+    .mb-251{
+        margin-bottom: clamp(75px, 251vw * @px2vw, 251px);
+    }
+
+    .mb-307{
+        margin-bottom: clamp(85px, 307vw * @px2vw, 307px);
     }
 
     .mb-360{
