quasi finita la pagina progetti

--- a/webroot/less/custom/spaces.less
+++ b/webroot/less/custom/spaces.less
@@ -48,8 +48,16 @@
         margin-bottom: clamp(70px, 224vw * @px2vw, 224px);
     }
 
+    .mb-245{
+        margin-bottom: clamp(73px, 245vw * @px2vw, 245px);
+    }
+
     .mb-251{
         margin-bottom: clamp(75px, 251vw * @px2vw, 251px);
+    }
+
+    .mb-263{
+        margin-bottom: clamp(77px, 263vw * @px2vw, 263px);
     }
 
     .mb-307{
