--- a/webroot/less/custom/spaces.less
+++ b/webroot/less/custom/spaces.less
@@ -32,6 +32,10 @@
         margin-bottom: clamp(40px, 148vw * @px2vw, 148px);
     }
 
+    .mb-156{
+        margin-bottom: clamp(45px, 156vw * @px2vw, 156px);
+    }
+
     .mb-175{
         margin-bottom: clamp(60px, 175vw * @px2vw, 175px)
     }
