--- a/webroot/less/components/big-img.less
+++ b/webroot/less/components/big-img.less
@@ -7,15 +7,23 @@
     align-items: center;
     justify-content: center;
 
-    img{
+    img,
+    video{
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
         object-fit: cover;
-        filter: brightness(50%);
         z-index: -1;
+    }
+
+    img{
+        filter: brightness(50%);
+    }
+
+    video{
+        filter: brightness(60%);
     }
 
     p{
