--- a/webroot/less/components/gallery.less
+++ b/webroot/less/components/gallery.less
@@ -3,7 +3,40 @@
     grid-template-columns: repeat(3, 1fr);
     gap: clamp(10px, 24vw * @px2vw, 24px);
 
-    img{
-        filter: brightness(80%);
+    &__img{
+        position: relative;
+        height: clamp(150px, 470vw * @px2vw, 470px);
+        margin-bottom: 1.85em;
+        .font-20;
+
+        img{
+            filter: brightness(80%);
+            position: absolute;
+            top: 0;
+            left: 0;
+            object-fit: cover;
+            width: 100%;
+        }
+
+        h1{
+            position: absolute;
+            bottom: -0.21em;
+            left: 50%;
+            transform: translateX(-50%);
+            color: @white;
+        }
+    }
+
+    & :nth-child(2) {
+        margin-top: 2.3em;
+    }
+
+    & :nth-child(3) {
+        margin-top: 4.9em;
+    }
+
+    p{
+        margin: auto;
+        width: clamp(80px, 220vw * @px2vw, 220px);
     }
 }
