--- a/webroot/less/components/mobile-menu.less
+++ b/webroot/less/components/mobile-menu.less
@@ -1,23 +1,25 @@
 .mobile-menu{
     position: fixed;
-    background: @bg-color;
+    background-color: transparent;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     z-index: 1000;
+    margin: auto;
+    width: 60%;
     display: flex;
-    transition: 600ms @easeOutQuad;
-    transform: translate3d(0,-100%,0);
-    -webkit-transform: translate3d(0,-100%,0);
+    transition: 300ms @easeOutQuad;
+    opacity: 0;
     visibility: hidden;
     pointer-events: none;
     will-change: transform;
+
     &.open{
-        transform: translate3d(0,-0%,0);
-        -webkit-transform: translate3d(0,-0%,0);
+        opacity: 1;
         visibility: visible;
         pointer-events: all;
+        transition-delay: 300ms;
     }
 
     &__close{
@@ -85,7 +87,7 @@
             font-size: clamp(30px, 60vw * @px2vw, 60px);
             line-height: 1em;
             display: inline-block;
-            color: @text-color;
+            color: @white;
             &--parent{
                 display: inline-flex;
                 align-items: center;
