--- a/webroot/less/base/form.less
+++ b/webroot/less/base/form.less
@@ -46,7 +46,7 @@ select {
     height: 55px;
     line-height: 55px;
     border-bottom: 1px solid @white;
-    font-size: 16px;
+    .font-18;
     transition: 300ms;
     color: @white;
     &:focus {
@@ -62,8 +62,8 @@ select {
 
 textarea {
     line-height: 1.2em;
-    padding: 25px 0;
-    height: auto;
+    padding: 30px 0;
+    height: 100px;
 }
 
 label {
@@ -91,7 +91,6 @@ label {
         
         label {
             .fw-medium;
-            .font-18;
             margin: 0;
             position: absolute;
             top: 50%;
@@ -108,15 +107,19 @@ label {
         textarea:placeholder-shown + label {
             transform: translate3d(0, -50%, 0);
             -webkit-transform: translate3d(0, -50%, 0);
-            font-size: 14px;
+            .font-18;
             opacity: 1;
         }
         
-        input:focus + label,
-        textarea:focus + label {
+        input:focus + label {
             transform: translate3d(0, -50%, 0) translate3d(0, -30px, 0);
             -webkit-transform: translate3d(0, -50%, 0) translate3d(0, -30px, 0);
-            font-size: 12px;
+            opacity: 0.5;
+        }
+
+        textarea:focus + label {
+            transform: translate3d(0, -165%, 0) translate3d(0, -40px, 0);
+            -webkit-transform: translate3d(0, -165%, 0) translate3d(0, -40px, 0);
             opacity: 0.5;
         }
         
@@ -130,7 +133,9 @@ label {
     
     &.textarea {
         label {
-            top: 30px;
+            top: 69%;
+            transform: translate3d(0, -165%, 0) translate3d(0, -40px, 0);
+            -webkit-transform: translate3d(0, -165%, 0) translate3d(0, -40px, 0);
         }
     }
 }
