--- a/webroot/less/components/footer.less
+++ b/webroot/less/components/footer.less
@@ -28,7 +28,18 @@
 
         &__agency,
         &__contacts{
-            width: clamp(100px, 240vw * @px2vw, 240px)
+            width: clamp(100px, 240vw * @px2vw, 240px);
+
+            span{
+                display: block;
+                .fw-medium;
+                .uppercase;
+                margin-bottom: 0.8em;
+            }
+
+            p{
+                line-height: 1.4em;
+            }
         }
 
         label{
