--- a/webroot/less/components/hamburger.less
+++ b/webroot/less/components/hamburger.less
@@ -1,7 +1,7 @@
 .hamburger{
     display: block;
-    width: clamp(30px, 97vw + @px2vw, 97px);
-    height: clamp(30px, 97vw + @px2vw, 97px);
+    width: clamp(64px, 97vw * @px2vw, 97px);
+    height: clamp(64px, 97vw * @px2vw, 97px);
     background-color: @black;
     border-radius: 1000px;
     position: relative;
@@ -34,7 +34,7 @@
         position: absolute;
         height: 1px;
         background: @white;
-        width: clamp(22px, 44vw * @px2vw, 44px);
+        width: clamp(30px, 44vw * @px2vw, 44px);
         left: 50%;
         right: 0;
         top: 50%;
@@ -56,12 +56,12 @@
             -webkit-transform: translate(-50%,-50%) translate3d(0,9px, 0);
         }
 
-        @media screen and(max-width: @tablet-m){
-            width: 45px;
-        }
-        @media screen and(max-width: @mobile-l){
-            width: 40px;
-        }
+        // @media screen and(max-width: @tablet-m){
+        //     width: 45px;
+        // }
+        // @media screen and(max-width: @mobile-l){
+        //     width: 40px;
+        // }
     }
 
 }
