--- a/webroot/less/custom/spaces.less
+++ b/webroot/less/custom/spaces.less
@@ -28,6 +28,10 @@
 
     //PX
 
+    .mt-40{
+        margin-top: clamp(12px, 40vw * @px2vw, 40px);
+    }
+
     .mb-148{
         margin-bottom: clamp(40px, 148vw * @px2vw, 148px);
     }
