--- a/webroot/less/base/typo.less
+++ b/webroot/less/base/typo.less
@@ -81,6 +81,10 @@ li{
     font-weight: 300;
 }
 
+.fw-regular{
+    font-weight: 400;
+}
+
 .fw-medium{
     font-weight: 500;
 }
@@ -177,7 +181,7 @@ li{
 }
 
 .font-20{
-    font-size: clamp(15px, 20vw * @px2vw, 20px);
+    font-size: clamp(14px, 20vw * @px2vw, 20px);
     line-height: 102.3%;
 }
 
