--- a/webroot/less/components/img-text.less
+++ b/webroot/less/components/img-text.less
@@ -3,6 +3,11 @@
     grid-template-columns: 1fr 1fr;
     padding-right: clamp(0px, 53vw * @px2vw, 53px);
 
+    @media screen and (max-width: 760px) {
+        display: block;
+        padding-right: 0;
+    }
+
     &--opacity{
         img{
             filter: brightness(60%);
@@ -14,6 +19,19 @@
         color: @white;
         .font-180;
         overflow: hidden;
+        width: 100%;
+
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: top;
+        }
+
+        @media screen and (max-width: 760px) {
+            height: 300px;
+            margin-bottom: 40px;
+        }
 
         &__word-1,
         &__word-2{
@@ -34,7 +52,11 @@
     &__text{
         margin-left: auto;
         align-self: center;
-        width: clamp(200px, 547vw * @px2vw, 547px);
+        width: clamp(280px, 547vw * @px2vw, 547px);
+
+        @media screen and (max-width: 760px) {
+            width: 100%;
+        }
 
         h2{
             margin-bottom: 0.4em;
