--- a/webroot/less/components/title.less
+++ b/webroot/less/components/title.less
@@ -1,5 +1,7 @@
 .title{
-    width: clamp(300px, 893vw * @px2vw, 893px);
+    .text-center;
+    .m-auto;
+    width: clamp(350px, 893vw * @px2vw, 893px);
     .font-96;
 
     h1{
@@ -8,7 +10,7 @@
     }
 
     p{
-        width: clamp(200px, 607vw * @px2vw, 607px);
+        width: clamp(300px, 607vw * @px2vw, 607px);
         .font-secondary;
         .font-18;
         .fw-book;
