--- a/webroot/less/components/triple-img.less
+++ b/webroot/less/components/triple-img.less
@@ -3,7 +3,7 @@
     overflow: hidden;
 
     &--products{
-        height: clamp(400px, 985vw * @px2vw, 985px);
+        height: clamp(300px, 985vw * @px2vw, 985px);
 
         img{
             position: absolute;
@@ -12,7 +12,7 @@
         & :first-child{
             bottom: clamp(30px, 190vw * @px2vw, 190px);
             left: 0;
-            transform: translateX(-2.5rem);
+            transform: translateX(-2.5em);
             width: clamp(150px, 567vw * @px2vw, 567px);
         }
 
@@ -26,13 +26,13 @@
         & :nth-child(3){
             bottom: 0;
             right: 0;
-            transform: translateX(2.5rem);
+            transform: translateX(2.5em);
             width: clamp(150px, 547vw * @px2vw, 547px);
         }
     }
 
     &--secondary{
-        height: clamp(400px, 822vw * @px2vw, 822px);
+        height: clamp(300px, 822vw * @px2vw, 822px);
 
         img{
             position: absolute;
@@ -41,20 +41,24 @@
         & :first-child{
             bottom: 0;
             left: 0;
-            transform: translateX(-2.5rem);
+            transform: translateX(-2.5em);
             width: clamp(150px, 547vw * @px2vw, 547px);
         }
 
         & :nth-child(2){
             top: clamp(20px, 97vw * @px2vw, 97px);
-            left: clamp(150px, 545vw * @px2vw, 545px);
-            width: clamp(100px, 425vw * @px2vw, 425px);
+            left: clamp(60px, 545vw * @px2vw, 545px);
+            width: clamp(130px, 425vw * @px2vw, 425px);
+
+            @media screen and (max-width: @mobile-m) {
+                left: 60px;
+            }
         }
 
         & :nth-child(3){
             top: 0;
             right: 0;
-            transform: translateX(2.5rem);
+            transform: translateX(2.5em);
             width: clamp(150px, 547vw * @px2vw, 547px);
             height: clamp(210px, 735vw * @px2vw, 735px);
         }
