responsive prodotto (da incolonnare gli elementi)

--- a/webroot/less/components/list.less
+++ b/webroot/less/components/list.less
@@ -1,14 +1,36 @@
 .list{
-    width: clamp(300px, 823vw * @px2vw, 823px);
+    width: clamp(650px, 823vw * @px2vw, 823px);
     list-style: none;
+
+    @media screen and (max-width: 750px) {
+        width: 90%;
+    }
 
     li{
         width: 100%;
         border-bottom: 1px solid @black;
-        display: flex;
-        justify-content: space-between;
+        display: grid;
+        justify-items: space-between;
+        grid-template-columns: repeat(3, 1fr);
         .font-18;
         padding-bottom: 0.6em;
         margin-bottom: 2.11em;
+
+        @media screen and (max-width: 750px) {
+            grid-template-columns: 1fr;
+        }
+    }
+
+    &__description{
+        .fw-book;
+        grid-column: 2 span;
+        justify-self: end;
+        @media screen and (max-width: 750px) {
+            justify-self: start;
+        }
+    }
+
+    &__info{
+        .fw-medium;
     }
 }
