--- a/webroot/less/components/img-text.less
+++ b/webroot/less/components/img-text.less
@@ -29,8 +29,12 @@
         }
 
         @media screen and (max-width: 760px) {
-            height: 300px;
+            height: 400px;
             margin-bottom: 40px;
+        }
+
+        @media screen and (max-width: 500px) {
+            height: 300px;
         }
 
         &__word-1,
