--- a/webroot/less/components/product.less
+++ b/webroot/less/components/product.less
@@ -17,6 +17,15 @@
     }
 
     &__gallery{
-        
+        .m-auto;
+        .container-m;
+        .mb-224;
+
+        @media screen and (max-width: 764px) {
+            margin-left: 0;
+            margin-right: 0;
+            width: 100%;
+        }
     }
+
 }
