--- a/webroot/less/components/contacts.less
+++ b/webroot/less/components/contacts.less
@@ -40,8 +40,20 @@
         }
 
         &__text-2{
+            display: flex;
+            justify-content: center;
+            gap: 16px;
+
+            & > * {
+                display: flex;
+                align-items: center;
+                gap: 3px;
+            }
+
             p {
+                margin-bottom: 0;
                 .fw-book;
+                border-bottom: 1px solid rgba(255, 255, 255, 0.5);
             }
         }
 
