--- a/webroot/less/components/contacts.less
+++ b/webroot/less/components/contacts.less
@@ -58,8 +58,14 @@
         }
 
         &__text-3{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 6px;
+            
             p {
                 .font-16;
+                margin: 0;
             }
         }
     }
